infra/k8s/overlays/do/gateway/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pong-route
  namespace: exercises
spec:
  parentRefs:
  - name: cilium-gateway-http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      port: 3000
  - matches:
    - path:
        type: Exact
        value: /pingpong
    backendRefs:
    - name: pong-svc
      port: 3000
